--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="https://image.rocketpunch.com/company/29601/jaranda_logo_1493742094.jpg?s=400x400&t=inside"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.PNG" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>자란다 - 돌봄과 배움을 함께, 우리 아이 단짝쌤 찾기</title>
-  </head>
 
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="https://image.rocketpunch.com/company/29601/jaranda_logo_1493742094.jpg?s=400x400&t=inside" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.PNG" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>자란다 - 돌봄과 배움을 함께, 우리 아이 단짝쌤 찾기</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+</body>
+
 </html>
